--- a/blog/INLA-Lets-Bypass-MCMC.Rmd
+++ b/blog/INLA-Lets-Bypass-MCMC.Rmd
@@ -1,6 +1,6 @@
 ---
 title : "INLA : Let's bypass MCMC"
-date  : "2017-04-26T11:55:32+08:00"
+date  : "2017-03-12"
 draft : false
 output: html_document
 fontsize : 18pt
